# LLVM-Lab

./: .gitignore
lab-src/: CMakeLists.txt  tiffcp
lab-src/lab1/: CMakeLists.txt  FindSucBBPass.cc  run-clang.sh
lab-src/lab2/: CMakeLists.txt  FindCallInstPass.cc  run-clang.sh
lab-src/lab3/: CMakeLists.txt  FindArgAndPaths.cc  run-clang.sh
lab-src/lab4/: CMakeLists.txt  InjectPrintPass.cc  logutils.c  logutils.llvm  run-clang.sh
